# clustering-good-bad-beautiful

./: .env.example  .gitignore  LICENSE  README.md  TALK.md  close.html  cosmos.html  extras.html  index.html  map.html  map_classic.html  map_posters.html  map_posters_demo.html  open.html  pyproject.toml  references.html  slides.html  tools.html  topics_100k_barchart.html  topics_100k_heatmap.html  topics_100k_hierarchy.html  topics_100k_over_time.html  topics_100k_scatter.html  topics_over_time.html
data/: bertopic_topic_labels_100k.json  bertopic_topic_metadata_100k.json  cluster_labels.json  cluster_labels_100k.json
notebooks/: 01_the_bad.ipynb  01_the_good.ipynb  02_the_bad.ipynb  02_the_good.ipynb  03_the_beautiful.ipynb  04_theater.ipynb  viz.py
scripts/: bertopic_visuals.py  dump_clusters.py  embed_overviews.py  fetch_movies.py  fetch_posters.py  label_hierarchy.py  render_animations.py  static_map.py  topics_over_time.py
slides/: ODSC AI East Template 2026_ LOGOS.pptx  distance_compression.py  sketch_blueprint.py  use_cases.py
