[project]
name = "clustering-good-bad-beautiful"
version = "0.1.0"
description = "Companion code for the ODSC AI East 2026 talk: Clustering — The Good, The Bad and The Beautiful."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Seth Levine" }]

dependencies = [
    "jupyterlab>=4.2",
    "ipywidgets>=8.1",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "plotly>=5.22",
    "sentence-transformers>=3.0",
    "transformers>=4.44",
    "datasets>=2.20",
    "umap-learn>=0.5.6",
    "hdbscan>=0.8.38",
    "bertopic>=0.16",
    "datamapplot>=0.4",
    "evoc>=0.2",
    "pillow>=10.3",
    "torch>=2.3",
    "requests>=2.32",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "imageio-ffmpeg>=0.5",
    "anthropic>=0.40",
]

[tool.uv]
package = false
